# tgcli

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: check_file_lines.py
src/tgcli/: __init__.py  cli.py  cli_dispatch.py  cli_health.py  cli_helpers.py  cli_parser.py  config.py  dynamic.py  errors.py  output.py  store.py  store_json.py  store_sqlite.py  telegram.py  telegram_auth.py  telegram_client.py  telegram_live.py  telegram_mapping.py  telegram_resolve.py  telegram_stories.py  telegram_story_values.py  types.py
tests/: test_output.py  test_qr_login.py  test_store.py  test_stories.py
typings/telethon/: __init__.pyi  errors.pyi  events.pyi  utils.pyi
typings/telethon/tl/: __init__.pyi  functions.pyi  types.pyi
