[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tgcli-local"
version = "0.1.0"
description = "A macOS-first Telegram CLI for auth, sync, search, and send workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Daniel Mulec" }
]
dependencies = [
  "qrcode>=8,<9",
  "Telethon>=1.43,<2",
]

[project.scripts]
tgcli = "tgcli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tgcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests", "scripts"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C90",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
  "RUF",
]

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.ruff.lint.isort]
known-first-party = ["tgcli"]

[tool.mypy]
python_version = "3.11"
files = ["src/tgcli", "scripts"]
mypy_path = "typings"
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
warn_return_any = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "types-qrcode>=8.2.0.20260518",
]
